--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
   <body>
 
     <a href="first.html">Click here</a>
-    <h1>Hello world</h1>
+    <h1>Hello world, here we go!</h1>
     <div>
       <div><div><div>
         <div></div>
